--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(stringMath)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(stringMath main.cpp test.h)
+add_executable(stringMath main.cpp test.h StringNumber.cpp StringNumber.h)
